After Forked Update

--- a/frappe/print/doctype/print_settings/print_settings.json
+++ b/frappe/print/doctype/print_settings/print_settings.json
@@ -14,7 +14,6 @@
    "allow_on_submit": 0, 
    "bold": 0, 
    "collapsible": 0, 
-   "columns": 0, 
    "fieldname": "pdf_settings", 
    "fieldtype": "Section Break", 
    "hidden": 0, 
@@ -39,7 +38,6 @@
    "allow_on_submit": 0, 
    "bold": 0, 
    "collapsible": 0, 
-   "columns": 0, 
    "default": "1", 
    "description": "Send Email Print Attachments as PDF (Recommended)", 
    "fieldname": "send_print_as_pdf", 
@@ -66,7 +64,6 @@
    "allow_on_submit": 0, 
    "bold": 0, 
    "collapsible": 0, 
-   "columns": 0, 
    "default": "1", 
    "fieldname": "repeat_header_footer", 
    "fieldtype": "Check", 
@@ -93,7 +90,6 @@
    "allow_on_submit": 0, 
    "bold": 0, 
    "collapsible": 0, 
-   "columns": 0, 
    "fieldname": "column_break_4", 
    "fieldtype": "Column Break", 
    "hidden": 0, 
@@ -118,7 +114,6 @@
    "allow_on_submit": 0, 
    "bold": 0, 
    "collapsible": 0, 
-   "columns": 0, 
    "default": "A4", 
    "fieldname": "pdf_page_size", 
    "fieldtype": "Select", 
@@ -145,7 +140,6 @@
    "allow_on_submit": 0, 
    "bold": 0, 
    "collapsible": 0, 
-   "columns": 0, 
    "fieldname": "view_link_in_email", 
    "fieldtype": "Section Break", 
    "hidden": 0, 
@@ -170,7 +164,6 @@
    "allow_on_submit": 0, 
    "bold": 0, 
    "collapsible": 0, 
-   "columns": 0, 
    "default": "1", 
    "description": "", 
    "fieldname": "attach_view_link", 
@@ -198,7 +191,6 @@
    "allow_on_submit": 0, 
    "bold": 0, 
    "collapsible": 0, 
-   "columns": 0, 
    "fieldname": "print_style_section", 
    "fieldtype": "Section Break", 
    "hidden": 0, 
@@ -223,7 +215,6 @@
    "allow_on_submit": 0, 
    "bold": 0, 
    "collapsible": 0, 
-   "columns": 0, 
    "default": "Modern", 
    "fieldname": "print_style", 
    "fieldtype": "Select", 
@@ -250,7 +241,6 @@
    "allow_on_submit": 0, 
    "bold": 0, 
    "collapsible": 0, 
-   "columns": 0, 
    "default": "Default", 
    "fieldname": "font", 
    "fieldtype": "Select", 
@@ -278,7 +268,6 @@
    "allow_on_submit": 0, 
    "bold": 0, 
    "collapsible": 0, 
-   "columns": 0, 
    "description": "In points. Default is 9.", 
    "fieldname": "font_size", 
    "fieldtype": "Float", 
@@ -304,7 +293,6 @@
    "allow_on_submit": 0, 
    "bold": 0, 
    "collapsible": 0, 
-   "columns": 0, 
    "fieldname": "column_break_6", 
    "fieldtype": "Column Break", 
    "hidden": 0, 
@@ -328,7 +316,6 @@
    "allow_on_submit": 0, 
    "bold": 0, 
    "collapsible": 0, 
-   "columns": 0, 
    "default": "1", 
    "description": "", 
    "fieldname": "with_letterhead", 
@@ -355,7 +342,6 @@
    "allow_on_submit": 0, 
    "bold": 0, 
    "collapsible": 0, 
-   "columns": 0, 
    "default": "1", 
    "description": "", 
    "fieldname": "allow_print_for_draft", 
@@ -383,7 +369,6 @@
    "allow_on_submit": 0, 
    "bold": 0, 
    "collapsible": 0, 
-   "columns": 0, 
    "default": "1", 
    "fieldname": "add_draft_heading", 
    "fieldtype": "Check", 
@@ -410,7 +395,6 @@
    "allow_on_submit": 0, 
    "bold": 0, 
    "collapsible": 0, 
-   "columns": 0, 
    "description": "", 
    "fieldname": "allow_print_for_cancelled", 
    "fieldtype": "Check", 
@@ -437,7 +421,6 @@
    "allow_on_submit": 0, 
    "bold": 0, 
    "collapsible": 0, 
-   "columns": 0, 
    "fieldname": "section_break_8", 
    "fieldtype": "Section Break", 
    "hidden": 0, 
@@ -461,7 +444,6 @@
    "allow_on_submit": 0, 
    "bold": 0, 
    "collapsible": 0, 
-   "columns": 0, 
    "fieldname": "print_style_preview", 
    "fieldtype": "HTML", 
    "hidden": 0, 
@@ -494,8 +476,8 @@
  "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2016-09-12 03:19:17.867459", 
- "modified_by": "Administrator", 
+ "modified": "2018-04-13 18:22:35.411981", 
+ "modified_by": "asneha@cloude8.com", 
  "module": "Print", 
  "name": "Print Settings", 
  "name_case": "", 
