--- a/frappe/website/doctype/portal_settings/portal_settings.json
+++ b/frappe/website/doctype/portal_settings/portal_settings.json
@@ -2,11 +2,13 @@
  "allow_copy": 0, 
  "allow_import": 0, 
  "allow_rename": 0, 
+ "beta": 0, 
  "creation": "2016-03-30 01:40:20.001775", 
  "custom": 0, 
  "docstatus": 0, 
  "doctype": "DocType", 
  "document_type": "", 
+ "editable_grid": 0, 
  "fields": [
   {
    "allow_on_submit": 0, 
@@ -38,14 +40,15 @@
  "hide_heading": 0, 
  "hide_toolbar": 0, 
  "idx": 0, 
+ "image_view": 0, 
  "in_create": 0, 
  "in_dialog": 0, 
  "is_submittable": 0, 
  "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2016-03-30 01:40:20.001775", 
- "modified_by": "Administrator", 
+ "modified": "2018-04-13 18:19:39.196870", 
+ "modified_by": "asneha@cloude8.com", 
  "module": "Website", 
  "name": "Portal Settings", 
  "name_case": "", 
@@ -72,6 +75,7 @@
    "write": 1
   }
  ], 
+ "quick_entry": 0, 
  "read_only": 0, 
  "read_only_onload": 0, 
  "sort_field": "modified", 
